<resources>
    <string name="app_name">AppOrderFood</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="ngaysinh">Date of Birth</string>
    <string name="cmnd">Id number</string>
    <string name="dongy">Login</string>
    <string name="thoat">Exit</string>
    <string name="dangki">Register</string>
    <string name="loinhaptendangnhap">Enter User Name</string>
    <string name="loinhapmatkhau">Enter Password</string>
    <string name="themthanhcong">Success</string>
    <string name="themthatbai">Fail</string>
    <string name="dangnhap">Login</string>
    <string name="trangchu">Main Page</string>
    <string name="thucdon">Menu</string>
    <string name="nhanvien">Nhân Viên</string>
    <string name="thongke"> Thống Kê   </string>
    <string name="caidat">Cai Dat</string>
    <string name="tennhanvien">Tên Nhân Vi</string>
    <string name="mo">Open</string>
    <string name="dong">Close</string>
    <string name="thembanan">Add Tables</string>
    <string name="tenbanan">Table Name</string>
    <string name="ok">Ok</string>
    <string name="tenmonan">Tên món ăn</string>
    <string name="giatien">Giá tiền </string>
    <string name="themthucdon">Thêm thực đơn</string>
    <string name="banan">Bàn ăn</string>
    <string name="loaithucdon">Loại Thực Đơn </string>
    <string name="tenloai">Tên Loại  </string>
    <string name="vuilongnhapdulieu">Vui lòng nhập dữ liệu</string>
    <string name="loithemmonan">Vui lòng nhập đủ thông </string>
    <string name="gia">Giá</string>
    <string name="themsoluong">Vui lòng nhập số lượng</string>
    <string name="soluong">Số Lượng</string>
    <string name="tongtien">Tổng Tiền : </string>
    <string name="thanhtoan">Thanh toán   </string>
    <string name="thanhtoanthanhcong">Thanh toán thành công </string>
    <string name="loi">Lỗi </string>
    <string name="sua">Sữa</string>
    <string name="xoa">Xóa</string>
    <string name="tongcong">Tổng hóa đơn </string>
    <string name="xoathanhcong">Xóa thành công !</string>
    <string name="suathanhcong">Sữa thàng công !</string>
    <string name="themnhanvien">Thêm nhân viên !</string>
    <string name="capnhatnhanvien">Cập nhật nhân viên</string>
</resources>