<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <group
       android:checkableBehavior="single"
       >
       <item
           android:id="@+id/itTrangChu"
           android:title="@string/trangchu"
           android:icon="@drawable/trangchu"

           />

       <item
           android:id="@+id/itThucDon"
           android:title="@string/thucdon"
           android:icon="@drawable/logodangnhap"

           />

       <item
           android:id="@+id/itNhanVien"
           android:title="@string/nhanvien"
           android:icon="@drawable/nhanvien"

           />

       <item
           android:title="@string/thongke"
           android:icon="@drawable/thongke"
           />

       <item
           android:icon="@drawable/caidat"
           android:title="@string/caidat" />
   </group>


</menu>