<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size5dp"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/green"
        android:padding="@dimen/size10dp">

        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"></TextView>
        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"></TextView>
        <TextView
            android:layout_weight="1"
            android:textSize="@dimen/size18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giatien"></TextView>

    </LinearLayout>
    <GridView
        android:id="@+id/gvThanhToan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"
        android:numColumns="1"
        >

    </GridView>

    <TextView
        android:id="@+id/txtTongTien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tongtien"
        android:textSize="@dimen/size18sp"
        android:textStyle="bold"
        android:textColor="@color/black"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/size10dp"
        >
        <Button
            android:id="@+id/btnThanhToan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thanhtoan"
            android:background="@color/green">

        </Button>
        <Button
            android:id="@+id/btnThoatThanhToan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thoat"
            android:background="@color/orange"
            android:layout_marginLeft="@dimen/size10dp"></Button>
    </LinearLayout>

</LinearLayout>