<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/size10dp"
        android:paddingHorizontal="@dimen/size10dp"
        >

        <TextView
            android:id="@+id/txtTenMonAnThanhToan"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenmonan"
            android:textColor="@color/black"></TextView>
        <TextView
            android:id="@+id/txtSoLuongThanhToan"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soluong"
            android:textColor="@color/black"></TextView>
        <TextView
            android:id="@+id/txtGiaTienThanhToan"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/giatien"
            android:textColor="@color/black"></TextView>

    </LinearLayout>

</LinearLayout>