<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size40dp"
        android:text="@string/dangnhap"
        android:layout_above="@id/lnKhungDangNhap"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"


        />


    <ImageView
        android:layout_width="@dimen/size170dp"
        android:layout_height="@dimen/size170dp"
        android:layout_alignRight="@id/lnKhungDangNhap"
        android:layout_marginTop="@dimen/size200dp"
        app:srcCompat="@drawable/logodangnhap" />

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        >

        <EditText
            android:id="@+id/edTenDangNhapDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/grey"
            android:padding="@dimen/size10dp"
            android:paddingLeft="@dimen/size10dp"
            android:paddingRight="@dimen/size10dp"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:drawableLeft="@drawable/baseline_account_circle_black_18"
            android:drawablePadding="@dimen/size10dp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/edMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/size10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_lock_black_20"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/password"
            android:padding="@dimen/size10dp"
            android:paddingLeft="@dimen/size10dp"
            android:paddingRight="@dimen/size10dp"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            tools:ignore="Deprecated" />

        <Button
            android:id="@+id/btnDongYDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangnhap"
            android:padding="@dimen/size10dp"
            android:background="@color/orange"
            android:layout_margin="@dimen/size10dp"

            />
        <Button
            android:id="@+id/btnDangKyDN"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangki"
            android:background="@color/design_default_color_primary"
            android:layout_marginLeft="@dimen/size10dp"
            android:layout_marginRight="@dimen/size10dp"
            />
    </LinearLayout>


</RelativeLayout>